5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1716_2502.log
== TEST (2019-05-16 14:52:59) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
calculo = x
v=1
sinal = -1
a = 3
while(v<k):
	calculo = calculo + (sinal*(x**a))/factorial(a)
	sinal = sinal * (-1)
	a = a + 2
	v = v+1
print(round(calculo,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    k = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:56:52) 
-- CODE:
from math import *
n = int(input())
calculo = 0
v = 0
a = 0
sinal = 1
while(v<n):
	x = 12**(1/2) * (sinal*1)/((2*v)+1)*(3**a)
	calculo = calculo + x
	v = v+ 1
	sinal = sinal * (-1)
	a = a + 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:57:09) 
-- CODE:
from math import *
n = int(input())
calculo = 0
v = 0
a = 0
sinal = 1
while(v<n):
	x = 12**(1/2) * (sinal*1)/((2*v)+1)*(3**a)
	calculo = calculo + x
	v = v+ 1
	sinal = sinal * (-1)
	a = a + 1
print(round(calculo,8))
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:57:13) 
-- CODE:
from math import *
n = int(input())
calculo = 0
v = 0
a = 0
sinal = 1
while(v<n):
	x = 12**(1/2) * (sinal*1)/((2*v)+1)*(3**a)
	calculo = calculo + x
	v = v+ 1
	sinal = sinal * (-1)
	a = a + 1
print(round(calculo,8))
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:57:19) 
-- CODE:
from math import *
n = int(input())
calculo = 0
v = 0
a = 0
sinal = 1
while(v<n):
	x = 12**(1/2) * (sinal*1)/((2*v)+1)*(3**a)
	calculo = calculo + x
	v = v+ 1
	sinal = sinal * (-1)
	a = a + 1
print(round(calculo,8))
-- EXECUTION TIME:
0.134196
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
7125.58712382
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
420865.97458955
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
-363.2842469
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:58:28) 
-- CODE:
from math import *
n = int(input())
calculo = 0
v = 0
a = 0
sinal = 1
while(v<n):
	denominador = ((2*v)+1)*(3**a)
	x = 12**(1/2) * (sinal*1)/denominador
	calculo = calculo + x
	v = v+ 1
	sinal = sinal * (-1)
	a = a + 1
print(round(calculo,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:58:34) 
-- CODE:
from math import *
n = int(input())
calculo = 0
v = 0
a = 0
sinal = 1
while(v<n):
	denominador = ((2*v)+1)*(3**a)
	x = 12**(1/2) * (sinal*1)/denominador
	calculo = calculo + x
	v = v+ 1
	sinal = sinal * (-1)
	a = a + 1
print(round(calculo,8))
-- EXECUTION TIME:
0.182364
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
